# internal/delivery/http/utils/error.go
@@ -1,4 +1,4 @@
-package echoutil
+package utils
 
 import (
 	"errors"
@@ -15,9 +15,9 @@ import (
 // Попутно логируются все пятисотки
 func NewError(ctx echo.Context, status int, err error) *echo.HTTPError {
 	httpError := &echo.HTTPError{Code: status}
-	var e entity.ClientError
-	if errors.As(err, &e) {
-		httpError.Message = e.Error()
+	var clientError entity.ClientError
+	if errors.As(err, &clientError) {
+		httpError.Message = clientError.Error()
 	} else {
 		// клиентской ошибки нет, поэтому отобразим стандартное описание
 		httpError.Message = http.StatusText(status)
@@ -41,10 +41,14 @@ type ServerErrorMsg struct {
 }
 
 func GetErrMsgFromContext(ctx echo.Context, err error) ServerErrorMsg {
-	// todo: гипотетически тело запроса может быть большим, лучше заасинхронить чтение
 	body, e := io.ReadAll(ctx.Request().Body)
 	if e != nil {
 		body = []byte("не удалось получить тело запроса")
+	}
+
+	var clientError entity.ClientError
+	if errors.As(err, &clientError) {
+		err = errors.Join(err, clientError.Additional)
 	}
 
 	return ServerErrorMsg{
