# internal/delivery/http/utils/session.go
@@ -2,6 +2,8 @@ package utils
 
 import (
 	"github.com/go-park-mail-ru/2024_1_Cyberkotletki/config"
+	"github.com/go-park-mail-ru/2024_1_Cyberkotletki/internal/entity"
+	"github.com/go-park-mail-ru/2024_1_Cyberkotletki/internal/usecase"
 	"github.com/labstack/echo/v4"
 	"net/http"
 	"time"
@@ -17,4 +19,16 @@ func SessionSet(ctx echo.Context, value string, expires time.Time) {
 		Path:     "/",
 	}
 	ctx.SetCookie(&cookie)
+}
+
+func GetUserIDFromSession(ctx echo.Context, authUC usecase.Auth) (int, error) {
+	session, err := ctx.Cookie("session")
+	if err != nil {
+		return -1, entity.NewClientError("необходима авторизация", entity.ErrUnauthorized)
+	}
+	userID, err := authUC.GetUserIDBySession(session.Value)
+	if err != nil {
+		return -1, entity.NewClientError("необходима авторизация", entity.ErrUnauthorized)
+	}
+	return userID, nil
 }
